# Verbeal

./: BuildConfig.h.in  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  Resource.rc  main.cpp
src/io/: SpecialPaths.cpp  SpecialPaths.h
src/io/windows/: SpecialFolders.cpp  SpecialFolders.h
